--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,45 @@
-<app-chart></app-chart>
+<body>
+  <ul>
+    <div>
+      <div>
+        <form>
+          <label for="filtroDataInicio">Start date:</label>
+          <input type="date" id="filtroDataInicio" name="filtroDataInicio" [(ngModel)]="dataInicial">
+          <label for="filtroDataTermino">End date:</label>
+          <input type="date" id="filtroDataTermino" name="filtroDataTermino" [(ngModel)]="dataFinal">
+          <button type="button" (click)="buscarIntervalo()">Search</button>
+        </form>
+      </div>
+      <table>
+        <tr>
+          <th>
+            <div class="chart chart-column">
+              <highcharts-chart [Highcharts]="Highcharts" [options]="columnChartOptions"
+                style="height: 400px;"></highcharts-chart>
+            </div>
+          </th>
+          <th>
+            <div class="chart chart-pie">
+              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+                style="height: 400px;"></highcharts-chart>
+            </div>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <div class="chart chart-column">
+              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChart2Options"
+                style="height: 400px;"></highcharts-chart>
+            </div>
+          </th>
+          <th>
+            <div class="chart chart-pie">
+              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+                style="height: 400px;"></highcharts-chart>
+            </div>
+          </th>
+        </tr>
+      </table>
+    </div>
+  </ul>
+</body>
