definidos os graficos

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,13 +14,13 @@
         <tr>
           <th>
             <div class="chart chart-column">
-              <highcharts-chart [Highcharts]="Highcharts" [options]="columnChartOptions"
+              <highcharts-chart [Highcharts]="Highcharts" [options]="barQuantidadeContainers"
                 style="height: 400px;"></highcharts-chart>
             </div>
           </th>
           <th>
             <div class="chart chart-pie">
-              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptionsCustos"
                 style="height: 400px;"></highcharts-chart>
             </div>
           </th>
@@ -28,13 +28,13 @@
         <tr>
           <th>
             <div class="chart chart-column">
-              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChart2Options"
+              <highcharts-chart [Highcharts]="Highcharts" [options]="lineChartOptionsCustos"
                 style="height: 400px;"></highcharts-chart>
             </div>
           </th>
           <th>
             <div class="chart chart-pie">
-              <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+              <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsReutiliza"
                 style="height: 400px;"></highcharts-chart>
             </div>
           </th>
