primeiro grafico interativo

--- a/src/app/tela-user/tela-user.component.html
+++ b/src/app/tela-user/tela-user.component.html
@@ -25,7 +25,7 @@
 
         <p>Total lines {{ itemsFiltrados.length }}</p>
 
-        <div (click)="toggleColumn()" class="show-hide-icon">+</div>
+        <div><button (click)="toggleColumn()">Select</button></div>
 
         <table>
           <thead>
