--- a/src/app/app/home/live-form-dialog/live-form-dialog.component.html
+++ b/src/app/app/home/live-form-dialog/live-form-dialog.component.html
@@ -25,7 +25,7 @@
 
     </tr>
     <tr>
-      <td><label>Handling</label></td>
+      <td><label>THC</label></td>
       <td><label>Daily Cost</label></td>
       <td><label>Term of Contract</label></td>
 
