--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
       <table>
         <tr>
           <th>
-            <div class="chart chart-column">
+            <div class="chart chart-column" id="chartQuantidade">
               <highcharts-chart [Highcharts]="Highcharts" [options]="barQuantidadeContainers"
                 style="height: 400px;"></highcharts-chart>
             </div>
