--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
           <th>Liner Names</th>
           <th>Freight cost</th>
           <th>Free time</th>
-          <th>Handling</th>
+          <th>THC</th>
           <th>Daily Cost</th>
           <th>Term of Contract</th>
           <th>Notes</th>
@@ -23,7 +23,7 @@
           <td>{{ item.liner }}</td>
           <td> ${{ item.tripcost.toFixed(2) }}</td> <!-- adicionando o símbolo da moeda Real -->
           <td>{{ item.freetime }}</td>
-          <td>${{ item.fsperiod.toFixed(2) }}</td>
+          <td>{{ item.fsperiod.toFixed(2) | currency:'BRL':'symbol':'1.2-2' }}</td>
           <td>${{ item.scperiod.toFixed(2) }}</td>
           <td>{{ item.tdperiod }}</td>
           <td>{{ item.comentario }}</td>
