--- a/src/app/app/home/live-form-dialog/live-form-dialog.component.html
+++ b/src/app/app/home/live-form-dialog/live-form-dialog.component.html
@@ -14,7 +14,7 @@
   <table class="table table-dark">
     <tr>
       <td><label>Liner Name</label></td>
-      <td><label>Freight Cost (US$)</label></td>
+      <td><label>Freight cost + BAF (US$)</label></td>
       <td><label>Free time (Days)</label></td>
 
     </tr>
