--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       <thead>
         <tr>
           <th>Liner Names</th>
-          <th>Freight cost</th>
+          <th>Freight cost + BAF</th>
           <th>Free time</th>
           <th>THC</th>
           <th>Daily Cost</th>
