--- a/src/app/tela-user/tela-user.component.html
+++ b/src/app/tela-user/tela-user.component.html
@@ -53,7 +53,7 @@
                 <button (click)="sortBy('Liner')">Liner</button>
               </th>
               <th>
-                <button (click)="sortBy('ClearancePlace')">Harbor</button>
+                <button (click)="sortBy('ClearancePlace')">Clearance Place</button>
               </th>
               <th>
                 <button (click)="sortBy('Channel')">Channel</button>
@@ -68,7 +68,7 @@
                 <button (click)="sortBy2('FreeTime')">Freetime</button>
               </th>
               <th>
-                <button (click)="sortBy2('TripCost')">Trip Cost</button>
+                <button (click)="sortBy2('TripCost')">Freight cost + BAF</button>
               </th>
               <th>
                 <button (click)="sortBy2('Handling')">THC</button>
