--- a/src/app/atualizar/atualizar.component.html
+++ b/src/app/atualizar/atualizar.component.html
@@ -4,9 +4,11 @@
       <input type="file" (change)="onFileSelected($event)">
       <button class="data-save-btn" (click)="salvarNoBanco()">Data Save</button>
 
-        <div *ngIf="showProgressBar">
-          <progressbar [value]="progressValue" [max]="maxValue">{{ progressValue }} Saved lines</progressbar>
+      <div *ngIf="showProgressBar">
+        <div class="progress-bar-container">
+          <div class="progress-bar" [style.width]="getProgressWidth()" class="progress-bar"></div>
         </div>
+      </div>
 
       <a #downloadLink style="display: none;"></a>
       <div *ngIf="dataLoaded">
@@ -50,6 +52,18 @@
               <th>
                 <button (click)="sortBy('Demurrage')">Demurrage</button>
               </th>
+              <th>
+                <button (click)="sortBy('Volume')">Volume</button>
+              </th>
+              <th>
+                <button (click)="sortBy('Peso')">Peso</button>
+              </th>
+              <th>
+                <button (click)="sortBy('Value')">Value</button>
+              </th>
+              <th>
+                <button (click)="sortBy('Chegada')">Arrival</button>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -59,13 +73,20 @@
               <td>{{ item.Container }}</td>
               <td>{{ item.Step }}</td>
               <td>{{ item.Liner }}</td>
-              <td [ngClass]="{ 'verde-value': item.Channel == 'VERDE','negative-value': item.Channel == 'VERMELHO'}">{{ item.Channel }}</td>
+              <td [ngClass]="{ 'verde-value': item.Channel == 'VERDE','negative-value': item.Channel == 'VERMELHO'}">{{
+                item.Channel }}</td>
               <td>{{ item.ATA }}</td>
               <td>{{ item.Dias }}</td>
-              <td [ngClass]="{ 'negative-value': item.FreeTime < 0 , 'danger-value': item.FreeTime < 2 && item.FreeTime >= 0 }">{{ item.FreeTime }}</td>
+              <td
+                [ngClass]="{ 'negative-value': item.FreeTime < 0 , 'danger-value': item.FreeTime < 2 && item.FreeTime >= 0 }">
+                {{ item.FreeTime }}</td>
               <td>{{ item.TripCost | currency:'USD':'symbol':'1.2-2' }}</td>
               <td>{{ item.Handling | currency:'USD':'symbol':'1.2-2' }}</td>
               <td>{{ item.Demurrage | currency:'USD':'symbol':'1.2-2' }}</td>
+              <td>{{ item.Volume }} m³</td>
+              <td>{{ item.Peso }} Kg</td>
+              <td>US$ {{ item.Value }} </td>
+              <td>{{ item.Chegada }}</td>
             </tr>
           </tbody>
         </table>
