--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -60,6 +60,8 @@ td {
 }
 
 th {
+  position: relative;
+  padding: 0;
   background-color: #393939;
   border-bottom: 2px solid #404040;
 }
@@ -178,5 +180,22 @@ div {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+#chartCell {
+  position: relative;
+}
+
+#pieChartContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.chart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Adicione essa linha */
 }
 
