--- a/src/app/app/home/locais-destino/destino-form-dialog.component.html
+++ b/src/app/app/home/locais-destino/destino-form-dialog.component.html
@@ -16,12 +16,14 @@
       <td><label>Place</label></td>
       <td><label>e-mail</label></td>
       <td><label>Address</label></td>
+      <td><label>Distance (Km)</label></td>
 
     </tr>
     <tr>
       <td><input type="string" name="liner" [(ngModel)]="data.itemsData.local"></td>
       <td><input type="string" name="tripcost" [(ngModel)]="data.itemsData.contato"></td>
       <td><input type="string" name="freetime" [(ngModel)]="data.itemsData.endereco"></td>
+      <td><input type="string" name="distancia" [(ngModel)]="data.itemsData.distancia"></td>
 
     </tr>
 
