--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,11 +29,12 @@
         </tr>
         <tr>
           <th>
-            <div class="chart-container" id="chartOptionsCO2">
+            <div class="chart-container" id="chartContainerCO2">
               <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsCO2"
                 style="height: 400px; width: 100%;"></highcharts-chart>
             </div>
           </th>
+
           <th>
             <div class="chart-container" id="chartContainer">
               <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptionsReutiliza"
